SET(NAME host)
FILE(GLOB_RECURSE FILELIST *.cpp *.hpp *.c *.h *.rc)
LIST(LENGTH FILELIST LENGTH)
IF(LENGTH GREATER 0)
	ADD_EXECUTABLE(${NAME} ${FILELIST})
	SET_SOURCE_FILES_PROPERTIES(main.rc PROPERTIES LANGUAGE RC)
	SET_TARGET_PROPERTIES(${NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:windows")
	TARGET_LINK_LIBRARIES(${NAME})
	SET(LIBS)
	LIST(LENGTH LIBS LENGTH)
	IF(LENGTH GREATER 0)
		ADD_DEPENDENCIES(${NAME} ${LIBS})
		TARGET_LINK_LIBRARIES(${NAME} ${LIBS})
	ENDIF()
ENDIF()