SET(NAME sign)
FILE(GLOB_RECURSE FILELIST *.cpp *.hpp *.c *.h)
LIST(LENGTH FILELIST LENGTH)
IF(LENGTH GREATER 0)
	ADD_EXECUTABLE(${NAME} ${FILELIST})
	TARGET_LINK_LIBRARIES(${NAME})
	SET(LIBS )
	LIST(LENGTH LIBS LENGTH)
	IF(LENGTH GREATER 0)
		ADD_DEPENDENCIES(${NAME} ${LIBS})
		TARGET_LINK_LIBRARIES(${NAME} ${LIBS})
	ENDIF()
ENDIF()