SET(NAME sign)
FILE(GLOB_RECURSE FILELIST *.cpp *.hpp *.c *.h)
LIST(LENGTH FILELIST LENGTH)
IF(LENGTH GREATER 0)
	ADD_EXECUTABLE(${NAME} ${FILELIST})
	SET_TARGET_PROPERTIES(${NAME} PROPERTIES COMPILE_DEFINITIONS PRODUCT_NAME="${NAME}")
	TARGET_LINK_LIBRARIES(${NAME})
	SET(LIBS minizip mbedcrypto)
	LIST(LENGTH LIBS LENGTH)
	IF(LENGTH GREATER 0)
		TARGET_LINK_LIBRARIES(${NAME} ${LIBS})
	ENDIF()
ENDIF()