SET(NAME start)
FILE(GLOB_RECURSE FILELIST *.cpp *.hpp *.c *.h)
LIST(LENGTH FILELIST LENGTH)
IF(LENGTH GREATER 0)
	ADD_LIBRARY(${NAME} SHARED EXCLUDE_FROM_ALL ${FILELIST})
	SET_TARGET_PROPERTIES(${NAME} PROPERTIES LINK_FLAGS "/DEF:${CMAKE_CURRENT_SOURCE_DIR}/main.def")
	SET(LIBS )
	LIST(LENGTH LIBS LENGTH)
	IF(LENGTH GREATER 0)
		ADD_DEPENDENCIES(${NAME} ${LIBS})
		TARGET_LINK_LIBRARIES(${NAME} ${LIBS})
	ENDIF()
ENDIF()