SET(NAME cares)
ADD_DEFINITIONS(-DCARES_STATICLIB)
INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/../include/cares)
FILE(GLOB_RECURSE FILELIST *.cpp *.hpp *.c *.h)
LIST(LENGTH FILELIST LENGTH)
IF(LENGTH GREATER 0)
	ADD_LIBRARY(${NAME} STATIC EXCLUDE_FROM_ALL ${FILELIST})
	IF(APPLE)
		ADD_DEFINITIONS(-DOSX)
	ELSEIF(UNIX)
		ADD_DEFINITIONS(-DUNIX)
	ELSEIF(WIN32)
		TARGET_LINK_LIBRARIES(${NAME} Ws2_32)
	ENDIF()
ENDIF()