SET(NAME minizip)
INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_SOURCE_DIR}/../include/minizip)
FILE(GLOB_RECURSE FILELIST *.cpp *.hpp *.c *.h)
LIST(LENGTH FILELIST LENGTH)
IF(LENGTH GREATER 0)
	ADD_LIBRARY(${NAME} STATIC EXCLUDE_FROM_ALL ${FILELIST})
	SET(LIBS zlib)
	LIST(LENGTH LIBS LENGTH)
	IF(LENGTH GREATER 0)
		TARGET_LINK_LIBRARIES(${NAME} ${LIBS})
	ENDIF()
ENDIF()