SET(NAME unzip)
FILE(GLOB_RECURSE FILELIST *.cpp *.hpp *.c *.h)
LIST(LENGTH FILELIST LENGTH)
IF(LENGTH GREATER 0)
	ADD_LIBRARY(${NAME} STATIC EXCLUDE_FROM_ALL ${FILELIST})
	SET(LIBS zlib)
	LIST(LENGTH LIBS LENGTH)
	IF(LENGTH GREATER 0)
		ADD_DEPENDENCIES(${NAME} ${LIBS})
		TARGET_LINK_LIBRARIES(${NAME} ${LIBS})
	ENDIF()
ENDIF()